--- a/build.xml
+++ b/build.xml
@@ -73,6 +73,7 @@
 		</tstamp>
 		<!-- Create the build directory structure used by compile -->
 		<mkdir dir="${build}"/>
+		<mkdir dir="${dist}/lib"/>
 	</target>
 
 	<target name="compile" depends="init"
